<?xml version="1.0"?>
<package format="2">
  <name>realsense_gazebo_description</name>
  <version>0.1.0</version>
  <description>The realsense_gazebo_description package</description>
  <maintainer email="michele.tartari@iit.it">m-tartari</maintainer>
  <author email="michele.tartari@iit.it">m-tartari</author>
  <license>Apache 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>realsense_gazebo_plugin</depend>
  <depend>realsense2_description</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>